# -

./: CMakeLists.txt  README.md  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rnd.h  rndGenerator.cpp  shape.cpp  shape.h  sphere.cpp  sphere.h  test.txt  tetrahedron.cpp  tetrahedron.h  Отчет с характеристиками.txt
02-c-void/: CMakeLists.txt  data.h  extdata.h  input.c  inrnd.c  main.c  makefile  output.c  sorting.asm  sorting.lst  surfaceArea.asm  surfaceArea.c  surfaceArea.lst  task  text1.txt  text2.txt
02-c-void/rndTestsOut/: filled1.txt  filled10.txt  filled100.txt  filled1000.txt  filled10000.txt  sorted1.txt  sorted10.txt  sorted100.txt  sorted1000.txt  sorted10000.txt
02-c-void/tests/: in2.txt  in3.txt
02-c-void/testsOut/: filled1.txt  filled2.txt  filled3.txt  filled4.txt  filled5.txt  sorted1.txt  sorted2.txt  sorted3.txt  sorted4.txt  sorted5.txt
AVS-hw1/: CMakeLists.txt  README.md  container.cpp  container.h  main.cpp  rnd.h  Отчет с характеристиками.txt
AVS-hw1/figures/: parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h
AVS-hw1/rndTestsOut/: filled10.txt  filled100.txt  filled1000.txt  filled10000.txt  sorted10.txt  sorted100.txt  sorted1000.txt  sorted10000.txt
AVS-hw1/tests/: in1.txt  in2.txt  in4.txt  in5.txt
AVS-hw1/testsOut/: filled1.txt  filled2.txt  filled3.txt  filled4.txt  filled5.txt  sorted1.txt  sorted2.txt  sorted3.txt  sorted4.txt
AVS-hw2/: CMakeLists.txt  README.md  container.cpp  container.h  main.cpp  rnd.h  Отчет с характеристиками.txt
AVS-hw2/figures/: parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h
AVS-hw2/tests/: rndIn1.txt  rndIn2.txt  rndIn3.txt  rndIn4.txt  rndIn5.txt
AVS-hw5/: CMakeLists.txt  README.md  main.cpp  needle.h
AVS-hw5/workers/: firstWorker.cpp  firstWorker.h  secondWorker.cpp  secondWorker.h  thirdWorker.cpp  thirdWorker.h  worker.cpp  worker.h
avs3/: README.md  container.py  extender.py  filled5.txt  main.py  parallelepiped.py  sorted5.txt  sphere.py  tetrahedron.py  Отчёт с характеристиками.txt
avs3/rndTestsOut/: rndFilled10.txt  rndFilled100.txt  rndFilled1000.txt  rndFilled10000.txt  rndSorted1.txt  rndSorted10.txt  rndSorted100.txt  rndSorted1000.txt  rndSorted10000.txt  rndsorted10.txt  rndsorted100.txt  rndsorted1000.txt  rndsorted10000.txt
avs3/tests/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt
avs3/testsOut/: filled1.txt  filled2.txt  filled3.txt  filled4.txt  filled5.txt  sorted1.txt  sorted2.txt  sorted3.txt  sorted4.txt  sorted5.txt
tests/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  testRandom.txt
